Get closer to matching ONS figure

--- a/stories/Story 1 [draft].ipynb
+++ b/stories/Story 1 [draft].ipynb
@@ -801,7 +801,11 @@
    "source": [
     "# first day of 2020 is a Wednesday\n",
     "mortality_df['Date'] = [datetime.strptime(f'2020 {n-1} 3', '%Y %W %w').strftime('%Y-%m-%d') \n",
-    "                        for n in mortality_df['Week number']]"
+    "                        for n in mortality_df['Week number']]\n",
+    "\n",
+    "# might want to check these bounds match ONS end of week reporting\n",
+    "mortality_df = mortality_df[mortality_df['Date']>'2020-03-01']\n",
+    "mortality_df = mortality_df[mortality_df['Date']<'2020-04-18']"
    ]
   },
   {
@@ -1298,7 +1302,7 @@
     "\n",
     "# add COVID deaths as column\n",
     "total_deaths_df['COVID deaths'] = total_deaths_df[total_deaths_df['Cause of death'] == 'COVID 19']['Number of deaths']\n",
-    "total_deaths_df = total_deaths_df.drop_duplicates(subset=['COVID deaths'])\n",
+    "#BUG? total_deaths_df = total_deaths_df.drop_duplicates(subset=['COVID deaths'])\n",
     "total_deaths_df = total_deaths_df.drop(columns=['Cause of death'])\n",
     "total_deaths_df = total_deaths_df.rename(columns={'Number of deaths': 'Total deaths'})\n",
     "\n",
@@ -1407,7 +1411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
