--- a/stories/Story 1 [draft 1.4].ipynb
+++ b/stories/Story 1 [draft 1.4].ipynb
@@ -4,24 +4,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction - Story 1"
+    "# Who's actually protected by the Covid19 lockdown?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intro\n",
+    "Welcome to the first Turing Data Story.\n",
     "\n",
-    "Contents.\n",
+    "Our goal at _Turing Data Stories_ is to produce educational data science content through the story telling medium.\n",
     "\n",
-    "Intro Text.\n",
+    "Our stories begin with a question about a societal issue that is close to our hearts, and covers our entire analysis process in trying to answer it. From gathering and cleaning the data, to using it for data analysis.\n",
+    "\n",
+    "Our hope that our stories will not only provide the reader with interesting insight into these key issues, but also to showcase the explanatory power of data science techniques and hopefully enable the reader to try out some of these techniques themselves.\n",
+    "\n",
+    "Each of our stories will take the form of a Jupyter notebook, which will contain all the code required to follow along with the analysis but also an explanation of our thought process and what the code is doing.\n",
+    "\n",
+    "## Covid19 and deprivation\n",
+    "\n",
+    "Everyone in the UK will have been impacted by the Covid19 pandemic, from London to Manchester, Cardiff to Edinburgh. The virus has affected and taken many lives of people across society.\n",
+    "\n",
+    "Back on the 23rd of March 2020, the UK Government announced various lockdown measures with the intention to limit the spread of the virus and reduce the number of Covid19 related deaths. These lockdown measures meant the temporary closure of many commercial shops and businesses, as well as the limiting of work based travel to only those jobs that could not be done at home.\n",
+    "\n",
+    "We worry that the impact of Covid19 and the lockdown measures have disproportionally affected certain groups of people, in particular those in the most deprived areas whose livelihoods may have required them to leave the house more frequently.\n",
+    "\n",
+    "Earlier in June, the Office of National Statistics (ONS) published a report exploring this exact question: to assess whether those living in the most deprived areas of the UK were disproportionally affected by Covid19. The report seems to confirm our fear - between the months of  March to May 2020 those in the most deprived areas of the UK were more than twice as likely to die as a result of Covid19 than those in the least deprived areas.\n",
+    "\n",
+    "There are two caveats that we have with the ONS analysis. The first is **trust** - whether we can trust that the analysis has been performed correctly. There have been a number of concerns with Government Covid19 reporting, in particular with testing statistics. Whilst the ONS report comes attached with datasets, we would like to be able to independantly confirm this analysis. The second caveat is the **time frame** of the ONS report. Between March and May represents the time when the lockdown was most severe, with measures relaxing from June onwards. We wonder whether the ONS analysis will continue to be relevant as lockdown eases. For this purpose, we wish to extend the ONS analysis for when new data comes in.\n",
+    "\n",
+    "Thus for our first story we ask:\n",
+    "\n",
+    "**Have the Covid19 lockdown measures protected people equally across all socio-economic levels of society\"**\n",
+    "\n",
+    "We have two main objectives\n",
+    "\n",
+    "1) We want to replicate the ONS analysis using their provided data to ensure we have the correct data and that we have all the tools necessary to understand the problem.\n",
+    "\n",
+    "2) We want to extend the ONS analysis to consider different time periods - representing the severity of lockdown measures - to see how this affects people from different social-economic groups.\n",
     "\n",
     "Based on https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/bulletins/deathsinvolvingcovid19bylocalareasanddeprivation/latest\n",
     "\n",
+    "### Key Metrics\n",
+    "\n",
+    "Our analysis will involve exploring the relationship between the following key metrics:\n",
+    "\n",
+    "- Covid19 death figures over time and geographical region\n",
+    "- Index of multiple deprivation by geographical region\n",
+    "\n",
     "### Data Sources\n",
     "\n",
-    "ONS datasets:\n",
+    "We will use the following ONS datasets:\n",
     "\n",
     "- [Mortality count time series](https://www.ons.gov.uk/peoplepopulationandcommunity/healthandsocialcare/causesofdeath/datasets/deathregistrationsandoccurrencesbylocalauthorityandhealthboard)\n",
     "- [IMD Rankings (England only)](https://www.gov.uk/government/statistics/english-indices-of-deprivation-2019)\n",
@@ -29,14 +62,33 @@
     "- [Local Authority District Code Region Lookup Table](https://opendata.arcgis.com/datasets/3ba3daf9278f47daba0f561889c3521a_0.csv)\n",
     "- [ONS Mortality and Depravation Data](https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/deathsinvolvingcovid19bylocalareaanddeprivation)\n",
     "\n",
-    "In case any of the data sources become unavailable in the future, a download mirror is availible [here](https://drive.google.com/drive/folders/1NXp7DtBeCbTIv49_ngdgvQpQXaaB3f8F?usp=sharing)."
+    "In case any of the data sources become unavailable in the future, a download mirror is availible [here](https://drive.google.com/drive/folders/1NXp7DtBeCbTIv49_ngdgvQpQXaaB3f8F?usp=sharing).\n",
+    "\n",
+    "For simplicity this study is only focusing on England. \n",
+    "\n",
+    "We do understand the importance of investigating all of the regions of the UK. However due to the difference of lockdown measures across the nations of the UK, an independant analysis is required for each nation. We warmly encourage the reader to replicate our analysis with the other nations.\n",
+    "\n",
+    "### How we will do our analysis\n",
+    "\n",
+    "`<insert overview>`\n",
+    "\n",
+    "1) Download and process data from multiple deprivation\n",
+    "\n",
+    "2) Download and process data from Covid19 deaths\n",
+    "\n",
+    "At this point we want to join the two datasets together in order to explore the relationship between these two key metrics. A problem we will encounter is that the index of multiple deprivation comes with a geographical granularity at the LSOA level, whilst the Covid19 mortality counts come with a geographical granularity at the MSOA level. This means that for one MSOA there could be multiple LSOAs each with different indexes of multiple deprivation. Therefore we need to aggregate the LSOAs into MSOAs by averaging out the indexes of multiple deprivation.\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup & Data Collation"
+    "# Setup & Data Collation\n",
+    "\n",
+    "We begin by setting up our environment and calling various python libraries that we will be using for the analysis. \n",
+    "In particular, `pandas` and `numpy` are key data science libraries used for data processing. `geopandas` will help us dealing with geospatial data. `matplotlib` and `seaborn` will help us visualise our data."
    ]
   },
   {
@@ -70,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set some data locations and make directories if needed."
+    "Let's make some directories to download and save the data we need. "
    ]
   },
   {
@@ -106,6 +158,7 @@
    },
    "outputs": [],
    "source": [
+    "# This function can download data from a URL and then save it in a directory of our choice.\n",
     "def download_file(url, filename):\n",
     "    \n",
     "    # if the file already exists, return without redownloading\n",
@@ -126,7 +179,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Index of Multiple Deprevation"
+    "## Index of Multiple Deprivation\n",
+    "\n",
+    "Now let's download and process our deprivation data. This data provides a deprivation rank (lower rank meaning more deprived) for each LSOA."
    ]
   },
   {
@@ -396,7 +451,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "IMD table data has higher spatial resolution that the mortality data. We need to comibne the IMD rank to create a Local Authority District level rank. Let's construct a simple DataFrame that maps LAD code to mean IMD rank"
+    "The IMD table data has higher spatial resolution than the mortality data.\n",
+    "We need to comibne the IMD rank to create a Local Authority District level rank. Let's construct a simple DataFrame that maps LAD code to mean IMD rank"
    ]
   },
   {
@@ -2499,7 +2555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
