added link to parliament speech

--- a/stories/vaccine_efficacy/vaccine_efficacy.ipynb
+++ b/stories/vaccine_efficacy/vaccine_efficacy.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "On 28 June, 2021, newly installed Health Secretary Sajid Javid announced that the COVID-19 Vaccine Programme in the UK had severed the link between infection and severe disease, hospitalization, and death. Although cases were rising quickly at the time due to the spread of the Delta variant, this was not leading to as strong a rise in hospital admissions and deaths when compared to the earlier waves of the disease.\n",
+    "On 28 June, 2021, newly installed Health Secretary Sajid Javid announced that the COVID-19 Vaccine Programme in the UK had severed the link between infection and severe disease, hospitalization, and death (see [here](https://hansard.parliament.uk/Commons/2021-06-28/debates/16849758-096E-4650-B84D-643DF5458417/Covid-19Update) for the speech made to parliament on this topic). Although cases were rising quickly at the time due to the spread of the Delta variant, this was not leading to as strong a rise in hospital admissions and deaths when compared to the earlier waves of the disease.\n",
     "\n",
     "However, one problem that had cropped up in the COVID-19 pandemic is that exponential rises in cases, combined with some strong inertia in the causal chains that lead from infection to hospital admission, can obscure a crisis situation that can quickly become much, much worse. The delay between infection and hospital admission can last for a few weeks, so it may be that we just have not waited long enough to see the effect of recent cases on the hospital admissions. This story examines a method for analyzing the COVID-19 data in England for 2020-2021 and accounting for uncertainty by applying Bayesian inference to the problem.\n",
     "\n",
