--- a/stories/2021-09-08-Desert-Island-Disks/2021-09-08-Desert-Island-Disks.ipynb
+++ b/stories/2021-09-08-Desert-Island-Disks/2021-09-08-Desert-Island-Disks.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gorgeous-secondary",
+   "id": "remarkable-guitar",
    "metadata": {},
    "source": [
     "## Background"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "improving-signature",
+   "id": "accessible-reliance",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:19:28.925685Z",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "following-antique",
+   "id": "spanish-moore",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-18T10:37:21.767909Z",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "conceptual-cotton",
+   "id": "accepted-mechanics",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:43:22.604075Z",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "renewable-process",
+   "id": "collectible-foster",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:43:22.623799Z",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "current-platinum",
+   "id": "tribal-mexico",
    "metadata": {},
    "source": [
     "<span style=\"color:red\">**TODO**</span> Number of episodes per year - (include host changes on the x-axis?)\n"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "korean-links",
+   "id": "becoming-soldier",
    "metadata": {},
    "source": [
     "You can immediately see the long run of the programme, minus a small hiatus after WWII. This plot also illustrates the long run of Plomley until the mid-1980s, the vast majority of episodes compared to the other four hosts. \n"
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alive-combine",
+   "id": "positive-concentration",
    "metadata": {},
    "source": [
     "# Castaways"
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amino-leader",
+   "id": "iraqi-blame",
    "metadata": {},
    "source": [
     "## Plotting Functions\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "orange-conservative",
+   "id": "expired-leave",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:43:22.638480Z",
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comparative-failure",
+   "id": "declared-closure",
    "metadata": {},
    "source": [
     "## Gender"
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bored-nevada",
+   "id": "dressed-trance",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:29:00.278505Z",
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "directed-liability",
+   "id": "moved-syndication",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:43:31.411547Z",
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposed-creation",
+   "id": "conditional-planning",
    "metadata": {},
    "source": [
     "Okay, there are a few things to notice here. The first is that, throughout the bulk of the show's long history, there have been significantly more male castaways than female. But the plot is very spikey, demonstrating that from year to year the gender ratio of castaways on the show fluctuates by an appreciable amount. Since we are interested in looking at trends over several years, and not differences between consecutive years, lets try smoothing this plot by using a [moving average](https://en.wikipedia.org/wiki/Moving_average) of 5 years."
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "color-beach",
+   "id": "sixth-spare",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:43:31.599332Z",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laughing-moses",
+   "id": "departmental-retreat",
    "metadata": {},
    "source": [
     "The smoothed plot confirms the observation that the show has had siginifcantly more females than males. \n",
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "separated-rescue",
+   "id": "optimum-connecticut",
    "metadata": {},
    "source": [
     "## Age\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signal-safety",
+   "id": "pointed-mediterranean",
    "metadata": {},
    "source": [
     "<span style=\"color:red\">**TODO**</span>\n",
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experienced-rover",
+   "id": "pharmaceutical-upper",
    "metadata": {},
    "source": [
     "\n",
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stuffed-herald",
+   "id": "dense-maria",
    "metadata": {},
    "source": [
     "### Nationality / Country of Birth\n",
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "traditional-phenomenon",
+   "id": "natural-architect",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:43:32.911356Z",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "available-matrix",
+   "id": "popular-lover",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:45:50.494224Z",
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fantastic-broadcasting",
+   "id": "overhead-spelling",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:48:14.445494Z",
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neither-cycle",
+   "id": "separate-pride",
    "metadata": {},
    "source": [
     "## Profession\n",
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "quality-stroke",
+   "id": "dominant-brother",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:48:14.454366Z",
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "southern-hamburg",
+   "id": "dependent-promotion",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:48:14.461644Z",
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "small-grade",
+   "id": "smooth-triumph",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:48:14.796191Z",
@@ -799,12 +799,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reliable-qatar",
+   "id": "upper-interview",
    "metadata": {},
    "source": [
     "# Discs\n",
     "\n",
     "<span style=\"color:red\">**TODO**</span> Finish this section \n",
+    "\n",
     "<span style=\"color:red\">**TODO**</span> USE LATEST DATA\n",
     "\n",
     "\n",
@@ -820,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "provincial-faculty",
+   "id": "retired-commerce",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:48:20.909358Z",
@@ -839,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "sized-subject",
+   "id": "intended-hudson",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:48:32.266974Z",
@@ -856,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "female-discharge",
+   "id": "armed-shame",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:48:32.284967Z",
@@ -891,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "respiratory-musical",
+   "id": "sonic-veteran",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:48:32.579442Z",
@@ -909,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "marked-western",
+   "id": "expanded-peeing",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-08T09:48:32.840261Z",
@@ -938,6 +939,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "composite-property",
+   "metadata": {},
+   "source": [
+    "## Castaways + Discs\n",
+    "\n",
+    "<span style=\"color:red\">**TODO**</span> Finish this section \n",
+    "\n",
+    "\n",
+    "As one final dimension of this story, we want to look at both people and the music that they chose together.\n",
+    "\n",
+    "Popularity of different genres by different person type (gender, profession, etc).\n",
+    "- [ ] Does genre preference depend on profession? Could try looking at:\n",
+    "    - [ ] do scientists tend to prefer different styles of music to creatives?\n",
+    "- [ ] Do older/younger people tend to choose different genres\n",
+    "\n",
+    "Instead of a deep dive into polticians, we could group everyone into [creative, non-creative, polticians] (maybe just [creative, non-creative] if polticians are not different).\n",
+    "- [ ] Compare genre popularity by these groups\n",
+    "\n",
+    "Non-technical - intro to why we are looking closely at politicians. How do their music tastes map to general popularity? How different are politicians of different political parties?\n",
+    "\n",
+    "There has been reports that politicans have focus groups to choose their tracks for them, so as to represent themseles in a certain way. Is there any evidence of this in the data? \n",
+    "- Look into this, is it true?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "traditional-tournament",
+   "metadata": {},
+   "source": [
+    "### Network Analysis\n",
+    "\n",
+    "<span style=\"color:red\">**TODO**</span> are we including this? can just mention if it didn't work\n",
+    "\n",
+    "\n",
+    "\n",
+    "> Technical: Description of nework analysis for people. Code.\n",
+    "> * Network of castaways as nodes and edges as common artists (coloured by profession or time period)\n",
+    ">* Investigate comunities in the network \n",
+    "\n",
+    "Todo:\n",
+    "- [ ] Deal with people who have been on the show more than once.\n",
+    "\n",
+    "\n",
+    "Plots:\n",
+    "- [ ] Are network clusters associated with certain genres\n",
+    "- [ ] Who chose the most weird combination of tracks (e.g. who has the most number of tracks in the \"other\" genre category)? \n",
+    "- [ ] who has the least overlap with others in terms of track choice? conversely, who has the most bland choice?\n",
+    "\n",
+    "\n",
+    "Non-technical: Translate what the network analysis tells us about connections between people and music.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "returning-opinion",
    "metadata": {},
    "source": [
@@ -951,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "apart-hammer",
+   "id": "informational-cyprus",
    "metadata": {},
    "source": [
     "\n",
@@ -968,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legendary-verse",
+   "id": "deadly-convenience",
    "metadata": {},
    "outputs": [],
    "source": []
