--- a/stories/2021-09-08-Desert-Island-Disks/Desert-Island-Discs.ipynb
+++ b/stories/2021-09-08-Desert-Island-Disks/Desert-Island-Discs.ipynb
@@ -2732,7 +2732,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2746,7 +2746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
