add comment about missing data in conclusion

--- a/stories/2021-09-08-Desert-Island-Disks/Desert-Island-Discs.ipynb
+++ b/stories/2021-09-08-Desert-Island-Disks/Desert-Island-Discs.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "square-roommate",
+   "id": "medium-london",
    "metadata": {},
    "source": [
     "Finally, it's worth noting that since Wikipedia does not have information on every castaway, we are missing information on some castaways. In this case, we don't have a gender for 1.6% of castaways."
@@ -2764,9 +2764,9 @@
     "- When looking at genres chosen by different professions, athletes and bussinesspeople appear to have more popular tastes.\n",
     "- The network analysis reveals interesting connections between castaways and musical artists, with centrality reflecting the most popular, timeless music and artists, across multiple genres.\n",
     "\n",
-    "TODO: **Any caveats? For example: % of people we didn't find in wikipedia, % of songs we didn't find in spotify?**\n",
+    "After discovering the Desert Island Discs dataset, and some exploratory analysis, this project grew into a fairly long data story. To keep things focused, there are elements of this process that we mention but don't go into much detail about, and more complicated analysis for which we found a workable shortcut. Future data stories could pick up on a few of these threads, for example data scraping from Wikipedia. Spotify also provides a data for each song that we didn't use, like danceability, and, as noted above, we could also algorithmically create the metagenres from the microgenres.\n",
     "\n",
-    "After discovering the Desert Island Discs dataset, and some exploratory analysis, this project grew into a fairly long data story. To keep things focused, there are elements of this process that we mention but don't go into much detail about, and more complicated analysis for which we found a workable shortcut. Future data stories could pick up on a few of these threads, for example data scraping from Wikipedia. Spotify also provides a data for each song that we didn't use, like danceability, and, as noted above, we could also algorithmically create the metagenres from the microgenres."
+    "It's worth mentioning again that the data we used was incomplete. Wikipedia did not have complete information about all castaways, and we didn't always find matches for songs on Spotify. As examples, we were missing information about gender for around 1.5% of castaways, and we were missing profession information for around 10%. While this best-effort attempt limits our analysis somewhat, it is unlikely to substantially change our main findings."
    ]
   },
   {
