--- a/stories/2021-09-08-Desert-Island-Disks/Desert-Island-Discs.ipynb
+++ b/stories/2021-09-08-Desert-Island-Disks/Desert-Island-Discs.ipynb
@@ -23,7 +23,7 @@
     "- Sam Van Stroud\n",
     "\n",
     "**Reviewers:**\n",
-    "- Reviewer 1\n",
+    "Ed Chalstrey\n",
     "- Reviewer 2\n",
     "\n",
     "**Summary:**\n",
