--- a/stories/2021-09-08-Desert-Island-Disks/Desert-Island-Discs.ipynb
+++ b/stories/2021-09-08-Desert-Island-Disks/Desert-Island-Discs.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "**Reviewers:**\n",
     "Ed Chalstrey\n",
-    "- Reviewer 2\n",
+    "Markus Hauru\n",
     "\n",
     "**Summary:**\n",
     "\n",
