add preview image

--- a/stories/2022-03-09-Desert-Island-Discs/2022-03-09-Desert-Island-Discs.ipynb
+++ b/stories/2022-03-09-Desert-Island-Discs/2022-03-09-Desert-Island-Discs.ipynb
@@ -12,7 +12,7 @@
     "- toc: false\n",
     "- authors: Helen Duncan, Bill Finnegan, Luke Hare, Camila Rangel Smith, Sam Van Stroud\n",
     "- categories: [data exploration, data wrangling, data visualisation, digital humanities]\n",
-    "- image: images/story_previews/<file here>\n",
+    "- image: images/story_previews/2022-03-09-desert-island-disks.png\n",
     "\n",
     "**Authors:**\n",
     "- Helen Duncan\n",
