--- a/stories/2022-03-27_Glass_ML/Background_Info_for_story_submission.ipynb
+++ b/stories/2022-03-27_Glass_ML/Background_Info_for_story_submission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e5124205",
+   "id": "5a57394d",
    "metadata": {},
    "source": [
     "## Story description <br>\n",
@@ -13,7 +13,7 @@
     "There are two main research questions I wished to answer:\n",
     "\n",
     "1) What do the correlations between elements for the different types of glass in the 1987 database reveal about late 20th century glassmaking, as compared with early 20th century glassmaking techniques?<br>\n",
-    "2) Using a machine learning to train a model on the 1987 database, can that model be used to identify one or both of the older samples unseen by the model as containers?\n",
+    "2) Using machine learning to train a model on the 1987 database, can that model be used to identify one or both of the older samples unseen by the model as containers?\n",
     "\n",
     "## Which datasets will you be using in this Turing Data Story?<br>\n",
     "This analysis uses a U.K. database of glass samples from 1987 developed by Ian W. Evett and Ernest J. Spiehler. Their paper, first presented at the 1987 conference of the KBS (Knowledge-Based Systems) in Goverment, is:\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af07e2a1",
+   "id": "4fafbc92",
    "metadata": {},
    "source": []
   }
