--- a/stories/2022-03-27_Glass_ML/ML_20th_Century.ipynb
+++ b/stories/2022-03-27_Glass_ML/ML_20th_Century.ipynb
@@ -1332,8 +1332,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "names=['Ref_ix','Na','Mg','Al','Si','K','Ca','Ba','Fe']\n",
     "\n",
     "# feature extraction using univariate selection\n",
@@ -1368,30 +1366,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      ----Best features----\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_f8c1a_row0_col0, #T_f8c1a_row0_col1, #T_f8c1a_row0_col2, #T_f8c1a_row1_col0, #T_f8c1a_row1_col1, #T_f8c1a_row1_col2, #T_f8c1a_row2_col0, #T_f8c1a_row2_col1, #T_f8c1a_row2_col2, #T_f8c1a_row3_col0, #T_f8c1a_row3_col1, #T_f8c1a_row3_col2, #T_f8c1a_row5_col0, #T_f8c1a_row5_col1, #T_f8c1a_row5_col2 {\n",
+       "#T_7103c_row0_col0, #T_7103c_row0_col1, #T_7103c_row0_col2, #T_7103c_row1_col0, #T_7103c_row1_col1, #T_7103c_row1_col2, #T_7103c_row2_col0, #T_7103c_row2_col1, #T_7103c_row2_col2, #T_7103c_row3_col0, #T_7103c_row3_col1, #T_7103c_row3_col2, #T_7103c_row5_col0, #T_7103c_row5_col1, #T_7103c_row5_col2 {\n",
        "  background-color: ;\n",
        "}\n",
-       "#T_f8c1a_row4_col0, #T_f8c1a_row4_col1, #T_f8c1a_row4_col2, #T_f8c1a_row6_col0, #T_f8c1a_row6_col1, #T_f8c1a_row6_col2, #T_f8c1a_row7_col0, #T_f8c1a_row7_col1, #T_f8c1a_row7_col2, #T_f8c1a_row8_col0, #T_f8c1a_row8_col1, #T_f8c1a_row8_col2 {\n",
+       "#T_7103c_row4_col0, #T_7103c_row4_col1, #T_7103c_row4_col2, #T_7103c_row6_col0, #T_7103c_row6_col1, #T_7103c_row6_col2, #T_7103c_row7_col0, #T_7103c_row7_col1, #T_7103c_row7_col2, #T_7103c_row8_col0, #T_7103c_row8_col1, #T_7103c_row8_col2 {\n",
        "  background-color: gold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_f8c1a_\">\n",
+       "<table id=\"T_7103c_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
@@ -1402,58 +1393,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_f8c1a_level0_row0\" class=\"row_heading level0 row0\" >2</th>\n",
-       "      <td id=\"T_f8c1a_row0_col0\" class=\"data row0 col0\" >Mg</td>\n",
-       "      <td id=\"T_f8c1a_row0_col1\" class=\"data row0 col1\" >65.544521</td>\n",
-       "      <td id=\"T_f8c1a_row0_col2\" class=\"data row0 col2\" >1</td>\n",
+       "      <th id=\"T_7103c_level0_row0\" class=\"row_heading level0 row0\" >2</th>\n",
+       "      <td id=\"T_7103c_row0_col0\" class=\"data row0 col0\" >Mg</td>\n",
+       "      <td id=\"T_7103c_row0_col1\" class=\"data row0 col1\" >65.544521</td>\n",
+       "      <td id=\"T_7103c_row0_col2\" class=\"data row0 col2\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f8c1a_level0_row1\" class=\"row_heading level0 row1\" >7</th>\n",
-       "      <td id=\"T_f8c1a_row1_col0\" class=\"data row1 col0\" >Ba</td>\n",
-       "      <td id=\"T_f8c1a_row1_col1\" class=\"data row1 col1\" >38.974602</td>\n",
-       "      <td id=\"T_f8c1a_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <th id=\"T_7103c_level0_row1\" class=\"row_heading level0 row1\" >7</th>\n",
+       "      <td id=\"T_7103c_row1_col0\" class=\"data row1 col0\" >Ba</td>\n",
+       "      <td id=\"T_7103c_row1_col1\" class=\"data row1 col1\" >38.974602</td>\n",
+       "      <td id=\"T_7103c_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f8c1a_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
-       "      <td id=\"T_f8c1a_row2_col0\" class=\"data row2 col0\" >Al</td>\n",
-       "      <td id=\"T_f8c1a_row2_col1\" class=\"data row2 col1\" >35.726676</td>\n",
-       "      <td id=\"T_f8c1a_row2_col2\" class=\"data row2 col2\" >3</td>\n",
+       "      <th id=\"T_7103c_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
+       "      <td id=\"T_7103c_row2_col0\" class=\"data row2 col0\" >Al</td>\n",
+       "      <td id=\"T_7103c_row2_col1\" class=\"data row2 col1\" >35.726676</td>\n",
+       "      <td id=\"T_7103c_row2_col2\" class=\"data row2 col2\" >3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f8c1a_level0_row3\" class=\"row_heading level0 row3\" >1</th>\n",
-       "      <td id=\"T_f8c1a_row3_col0\" class=\"data row3 col0\" >Na</td>\n",
-       "      <td id=\"T_f8c1a_row3_col1\" class=\"data row3 col1\" >28.548019</td>\n",
-       "      <td id=\"T_f8c1a_row3_col2\" class=\"data row3 col2\" >4</td>\n",
+       "      <th id=\"T_7103c_level0_row3\" class=\"row_heading level0 row3\" >1</th>\n",
+       "      <td id=\"T_7103c_row3_col0\" class=\"data row3 col0\" >Na</td>\n",
+       "      <td id=\"T_7103c_row3_col1\" class=\"data row3 col1\" >28.548019</td>\n",
+       "      <td id=\"T_7103c_row3_col2\" class=\"data row3 col2\" >4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f8c1a_level0_row4\" class=\"row_heading level0 row4\" >5</th>\n",
-       "      <td id=\"T_f8c1a_row4_col0\" class=\"data row4 col0\" >K</td>\n",
-       "      <td id=\"T_f8c1a_row4_col1\" class=\"data row4 col1\" >8.748128</td>\n",
-       "      <td id=\"T_f8c1a_row4_col2\" class=\"data row4 col2\" >5</td>\n",
+       "      <th id=\"T_7103c_level0_row4\" class=\"row_heading level0 row4\" >5</th>\n",
+       "      <td id=\"T_7103c_row4_col0\" class=\"data row4 col0\" >K</td>\n",
+       "      <td id=\"T_7103c_row4_col1\" class=\"data row4 col1\" >8.748128</td>\n",
+       "      <td id=\"T_7103c_row4_col2\" class=\"data row4 col2\" >5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f8c1a_level0_row5\" class=\"row_heading level0 row5\" >6</th>\n",
-       "      <td id=\"T_f8c1a_row5_col0\" class=\"data row5 col0\" >Ca</td>\n",
-       "      <td id=\"T_f8c1a_row5_col1\" class=\"data row5 col1\" >2.971426</td>\n",
-       "      <td id=\"T_f8c1a_row5_col2\" class=\"data row5 col2\" >6</td>\n",
+       "      <th id=\"T_7103c_level0_row5\" class=\"row_heading level0 row5\" >6</th>\n",
+       "      <td id=\"T_7103c_row5_col0\" class=\"data row5 col0\" >Ca</td>\n",
+       "      <td id=\"T_7103c_row5_col1\" class=\"data row5 col1\" >2.971426</td>\n",
+       "      <td id=\"T_7103c_row5_col2\" class=\"data row5 col2\" >6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f8c1a_level0_row6\" class=\"row_heading level0 row6\" >4</th>\n",
-       "      <td id=\"T_f8c1a_row6_col0\" class=\"data row6 col0\" >Si</td>\n",
-       "      <td id=\"T_f8c1a_row6_col1\" class=\"data row6 col1\" >2.787330</td>\n",
-       "      <td id=\"T_f8c1a_row6_col2\" class=\"data row6 col2\" >7</td>\n",
+       "      <th id=\"T_7103c_level0_row6\" class=\"row_heading level0 row6\" >4</th>\n",
+       "      <td id=\"T_7103c_row6_col0\" class=\"data row6 col0\" >Si</td>\n",
+       "      <td id=\"T_7103c_row6_col1\" class=\"data row6 col1\" >2.787330</td>\n",
+       "      <td id=\"T_7103c_row6_col2\" class=\"data row6 col2\" >7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f8c1a_level0_row7\" class=\"row_heading level0 row7\" >8</th>\n",
-       "      <td id=\"T_f8c1a_row7_col0\" class=\"data row7 col0\" >Fe</td>\n",
-       "      <td id=\"T_f8c1a_row7_col1\" class=\"data row7 col1\" >2.710882</td>\n",
-       "      <td id=\"T_f8c1a_row7_col2\" class=\"data row7 col2\" >8</td>\n",
+       "      <th id=\"T_7103c_level0_row7\" class=\"row_heading level0 row7\" >8</th>\n",
+       "      <td id=\"T_7103c_row7_col0\" class=\"data row7 col0\" >Fe</td>\n",
+       "      <td id=\"T_7103c_row7_col1\" class=\"data row7 col1\" >2.710882</td>\n",
+       "      <td id=\"T_7103c_row7_col2\" class=\"data row7 col2\" >8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f8c1a_level0_row8\" class=\"row_heading level0 row8\" >0</th>\n",
-       "      <td id=\"T_f8c1a_row8_col0\" class=\"data row8 col0\" >Ref_ix</td>\n",
-       "      <td id=\"T_f8c1a_row8_col1\" class=\"data row8 col1\" >1.608955</td>\n",
-       "      <td id=\"T_f8c1a_row8_col2\" class=\"data row8 col2\" >9</td>\n",
+       "      <th id=\"T_7103c_level0_row8\" class=\"row_heading level0 row8\" >0</th>\n",
+       "      <td id=\"T_7103c_row8_col0\" class=\"data row8 col0\" >Ref_ix</td>\n",
+       "      <td id=\"T_7103c_row8_col1\" class=\"data row8 col1\" >1.608955</td>\n",
+       "      <td id=\"T_7103c_row8_col2\" class=\"data row8 col2\" >9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -1479,7 +1470,7 @@
     "    else:\n",
     "        color = ''\n",
     "    return ['background-color: %s' % color]*len(row.values)\n",
-    "print('      ----Best features----')\n",
+    "#print('      ----Best features----')\n",
     "from IPython.display import display, HTML\n",
     "display(HTML(best_features.style.apply(color_relevant_gold, axis=1).render()))"
    ]
