--- a/ML_20th_Century.ipynb
+++ b/ML_20th_Century.ipynb
@@ -1231,7 +1231,7 @@
     "\n",
     "It would seem good practice to analyze the correlations of each of these glass types separately, as we have done, since obviously the desired qualities of the glass will differ depending on the uses to which the glass will be put, and thus recipes will differ accordingly. The desired refractive index and brilliance of vehicle float glass will be far different than that of container or tableware glass, for example.\n",
     "\n",
-    "The elemental correlations in this 1987 database suggest changing priorities between production techniques of the 1930s and production techniques of the 1980s, toward more utilitarian styles and techniques. One does not require statistics to observe that container glass with high refractive index has become less common, if it ever was, giving way to containers in which seeing the contents clearly through the glass is the overriding concern. This change will probably affect what specific types of glass that machine learning models can correctly predict for much earlier samples that it has not seen.\n",
+    "The elemental correlations in this 1987 database suggest changing priorities between production techniques of the 1930s and production techniques of the 1980s, toward more utilitarian styles and techniques. One does not require statistics to observe that container glass with high refractive index has become less common, if it ever was, giving way to containers in which seeing the contents clearly through the glass is the overriding concern. This change will probably affect what specific types of glass that a machine learning model can correctly predict for much earlier samples that it has not seen.\n",
     "\n",
     "Now we turn to our last question."
    ]
