--- a/ML_20th_Century.ipynb
+++ b/ML_20th_Century.ipynb
@@ -127,7 +127,7 @@
     "dataset = read_csv(filename, header=None, sep=',',names=names)\n",
     "dataset_ml = read_csv(\n",
     "    filename, header=None, sep=',',names=names)\n",
-    "# Convert clunky object formats to strings\n",
+    "# Convert clunky object formats to ints\n",
     "dataset['GlassType'] = dataset['GlassType'].astype('string')\n",
     "dataset['GlassType'] = dataset['GlassType'].astype('int')\n",
     "dataset_ml['GlassType'] = dataset['GlassType'].astype('string')\n",
