--- a/stories/2022-03-27_Glass_ML/ML_20th_Century.ipynb
+++ b/stories/2022-03-27_Glass_ML/ML_20th_Century.ipynb
@@ -3215,7 +3215,7 @@
     "\n",
     "Thank you to all of the members of the Turing Data Stories Wednesday Meeting Group, who also offered many insights, camaraderie and support through many months of the process of creating new and interesting Turing Data Stories, and the work continues.\n",
     "\n",
-    "Thank you to Ric Gillespie of The International Group for Historic Aircraft Recovery for graciously allowing the sharing of this research with the Alan Turing Institute.\n",
+    "Thank you to Ric Gillespie of The International Group for Historic Aircraft Recovery for graciously allowing the sharing of this research with The Alan Turing Institute.\n",
     "\n",
     "Thank you to Ian W. Evett and Ernest J. Spiehler, for making the data from their 1987 glass study available for students and experienced data scientists alike to use.\n",
     "\n",
