--- a/stories/2022-03-27_Glass_ML/ML_20th_Century.ipynb
+++ b/stories/2022-03-27_Glass_ML/ML_20th_Century.ipynb
@@ -3219,7 +3219,7 @@
     "\n",
     "Thank you to Ian W. Evett and Ernest J. Spiehler, for making the data from their 1987 glass study available for students and experienced data scientists alike to use.\n",
     "\n",
-    "Thank you to my co-authors of the paper \"A Freckle In Time,\" which was written from 2010-2013: Greg George, Senior Staff Chemist at Persedo Spirits, Bill Lockhart, former assistant professor of sociology at New Mexico State University at Alamogordo, and Thomas Fulling King, former director of the United States Office of Cultural Resource Preservation."
+    "Thank you to my co-authors of the paper \"A Freckle In Time,\" which was written from 2010-2013: Greg George, Senior Staff Chemist at Persedo Spirits, Bill Lockhart, former assistant professor of sociology at New Mexico State University at Alamogordo, and Thomas Fulling King, former executive director of the United States Advisory Council on Historic Preservation."
    ]
   },
   {
